# Control_methods

./: .gitignore  CMakeLists.txt  README.md
ApplicationCode/include/: application.h  control.h  dependency_handler.h  enums.h  input_parameters_container.h  main_layout.h  main_window.h  plot_layout.h  plotter.h  simulator.h
Code/algebra/: algebra.h
Code/pid_tuner/: pid_tuner.h
Code/regression/: recursive_linear_regression.h
Code/signals/: signals.h
Code/sim_objects/: object_state_space_representation.h
LogicCode/include/: algebra.h  control_system.h  controller_base.h  derivative.h  integrator.h  object_differential_equation_representation.h  object_representation_base.h  object_state_space_representation.h  pid.h  pid_tuner.h  recursive_linear_regression.h  signals.h  sim_object_base.h  state.h  two_position_controller.h
LogicCode/include/base_classes/: signal_base.h  sim_object_base.h
MainApp/: main.cpp
Source/: main.cpp  test_with_plot.h
Source/algebra/: algebra.h
Source/components/: component_base.h  derivative.h  integrator.h
Source/object_models/: object.h
Source/pid_tuner/: pid_tuner.h
Source/regression/: recursive_linear_regression.h
Source/signals/: signals.h
Source/sim_objects/: control_system.h  derivative.h  integrator.h  object.h  object_differential_equation_representation.h  object_state_space_representation.h  pid.h  regulator_base.h  sim_object_base.h  state.h  two_position_controller.h
Source/test/: test_with_plot.h
Source/tuner/: tuner.h
Tests/: test_with_plot.h
Tests/test_suites/: algebra_test.cpp  components_test.cpp  control_system_test.cpp  control_system_with_pid_test.cpp  control_system_with_two_position_controller_test.cpp  pid_tuning_test.cpp  resetting_test.cpp  rls_test.cpp  signals_test.cpp
